--- a/index.html
+++ b/index.html
@@ -5,14 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my second github</title>
+    <title>my second github com</title>
 </head>
 
 <body>
     <h1>kfgf</h1>
     <p>jfgk fjkg</p>
     <h1>jhdfjh fjgb</h1>
+    <div>
+        <h3>amr nana koi</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, ab. Quibusdam animi ducimus optio cum
+            deserunt, praesentium, ipsa earum recusandae maxime eaque necessitatibus quod ipsam id explicabo nam vel
+            voluptatum molestiae veritatis iusto nostrum velit in, quo blanditiis minus. Ut!</p>
+    </div>
     <img src="naba.jpg" alt="">
+    <h1>djghkjhd dfhg</h1>
+    <p>fgshg</p>
 </body>
 
 </html>
